# deep-prove

./: .gitignore  404.html  Cargo.toml  README.md  devenv.nix  layers.html  overview.html  print.html  searchindex.js  searchindex.json  subroutines.html  toc.js
.github/: actionlint.yml
.github/workflows/: docker.yml  layers-quant.yml  main-bench.yml  mdbook.yml  pr-bench.yml  tests.yml
123/: index.html  layers.html  print.html  searchindex.js  subroutines.html
deep-prove/: Cargo.toml
deep-prove/src/: store.rs
deep-prove/src/middleware/: mod.rs  v1.rs  v2.rs
docker/: deep-prove-aws-client.dockerfile  deep-prove-worker.dockerfile  worker.dockerfile
docs/src/: dense.md  end_to_end_lu.md  layers.md  overview.md  relu.md
ff_ext/src/: lib.rs
gkr/: Cargo.toml
gkr/examples/: keccak256.rs
gkr/src/gadgets/: keccak256.rs
gkr/src/prover/: phase2_input.rs
mpcs/: Cargo.toml
mpcs/benches/: basecode.rs  basefold.rs  hashing.rs  rscode.rs
mpcs/src/: basefold.rs  lib.rs  sum_check.rs  util.rs
mpcs/src/basefold/: commit_phase.rs  encoding.rs  query_phase.rs  structure.rs
mpcs/src/basefold/encoding/: basecode.rs  rs.rs
mpcs/src/sum_check/: classic.rs
mpcs/src/sum_check/classic/: coeff.rs
mpcs/src/util/: arithmetic.rs  hash.rs  merkle_tree.rs
multilinear_extensions/: Cargo.toml
multilinear_extensions/src/: mle.rs  test.rs  util.rs  virtual_poly.rs
poseidon/: Cargo.toml
poseidon/src/: lib.rs
pr-preview/pr-193/: LLMs.html  end_to_end_lu.html  layers.html  maxpool.html  print.html  range_check.html  relu.html  searchindex.js  toc.html  toc.js
pr-preview/pr-193/llms-layers/: positionals.html  qkv.html
scripts/ci/: cmp-layers-quant.sh
simple-frontend/: Cargo.toml
sumcheck/: Cargo.toml
sumcheck/src/: lib.rs  prover.rs  structs.rs  test.rs
sumcheck_macro/: Cargo.toml
sumcheck_macro/examples/: expand.rs
sumcheck_macro/src/: lib.rs
transcript/: Cargo.toml
transcript/src/: blake.rs  lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
zkml/: Cargo.toml  README.md  bench.csv  bench.py
zkml/assets/scripts/CNN/: cifar-cnn.py  cnn-cifar-01.onnx  vgg-imagenet.py
zkml/assets/scripts/CNN/VGG/: vgg-imagenet-trained.py  vgg-imagenet-untrained.py
zkml/assets/scripts/MLP/: mlp.py  requirements.txt
zkml/assets/scripts/covid/: cnn.py  covid.py
zkml/assets/scripts/llms/: gpt2_internal.py  toy_gpt2.py
zkml/assets/test_scripts/softmax/: softmax.onnx  softmax.py
zkml/benches/: prove-model.rs
zkml/benches/ref-files/cnn/: model.onnx
zkml/benches/ref-files/mlp/: model.onnx
zkml/docs/: book.toml
zkml/docs/src/: LLMs.md  SUMMARY.md  end_to_end_lu.md  layers.md  overview.md  padding.md  quantisation.md  range_check.md  relu.md  requant.md  softmax.md
zkml/docs/src/llms-layers/: embeddings.md  layernorm.md  mha.md  positionals.md  qkv.md
zkml/pr-preview/pr-150/: print.html
zkml/pr-preview/pr-156/llms-layers/: mha.html
zkml/pr-preview/pr-161/: 404.html  LLMs.html  lookups.html  toc.html
zkml/pr-preview/pr-165/: LLMs.html  searchindex.js  toc.html  toc.js
zkml/pr-preview/pr-165/llms-layers/: qkv.html
zkml/pr-preview/pr-173/: print.html  searchindex.js
zkml/pr-preview/pr-185/: LLMs.html  commitments.html  print.html  searchindex.js  toc.html  toc.js
zkml/pr-preview/pr-185/llms-layers/: embeddings.html  qkv.html
zkml/pr-preview/pr-193/: LLMs.html  print.html  searchindex.js  softmax.html  toc.html  toc.js
zkml/pr-preview/pr-193/llms-layers/: embeddings.html  mha.html  positionals.html
zkml/pr-preview/pr-199/: LLMs.html  end_to_end_lu.html  maxpool.html  print.html  relu.html  searchindex.js  softmax.html  toc.html  toc.js
zkml/pr-preview/pr-199/llms-layers/: mha.html  qkv.html
zkml/pr-preview/pr-208/: print.html  range_check.html  searchindex.js
zkml/pr-preview/pr-208/llms-layers/: mha.html  qkv.html
zkml/pr-preview/pr-218/: commitments.html  layers.html  lookups.html  print.html  relu.html  searchindex.js  softmax.html  toc.html  toc.js
zkml/pr-preview/pr-218/llms-layers/: layernorm.html  mha.html  positionals.html  qkv.html
zkml/src/: activation.rs  convolution.rs  dense.rs  lib.rs  model.rs  onnx_parse.rs  padding.rs  pooling.rs  prover.rs  quantization.rs  store.rs  tensor.rs  tensors.rs  testing.rs  util.rs
zkml/src/commit/: context.rs  error.rs  mod.rs  new_commit.rs  precommit.rs  same_poly.rs
zkml/src/iop/: context.rs  mod.rs  prover.rs  split_sumcheck.rs  verifier.rs
zkml/src/layers/: activation.rs  add.rs  capture_quant.rs  common.rs  concat_matmul.rs  convolution.rs  dense.rs  embeddings.rs  flatten.rs  hadamard.rs  layernorm.rs  matmul.rs  matrix_mul.rs  matvec.rs  mod.rs  padding.rs  permute.rs  pooling.rs  requant.rs  reshape.rs  softmax.rs  stride.rs
zkml/src/layers/provable/: error.rs  mod.rs  node.rs
zkml/src/layers/transformer/: embeddings.rs  layernorm.rs  logits.rs  mha.rs  mod.rs  positional.rs  qkt.rs  qkv.rs  softmax.rs
zkml/src/lookup/: context.rs  mod.rs  witness.rs
zkml/src/lookup/logup_gkr/: circuit.rs  error.rs  mod.rs  prover.rs  structs.rs  verifier.rs
zkml/src/middleware/: mod.rs  v1.rs
zkml/src/model/: error.rs  inference.rs  iterator.rs  llm.rs  mod.rs  node.rs  trace.rs
zkml/src/model/inference/: inference_model.rs  node.rs  step.rs
zkml/src/parser/: gguf.rs  json.rs  llm.rs  mod.rs  note.txt  onnx.rs
zkml/src/provable_ops/: add.rs  constant.rs  error.rs  mod.rs
zkml/src/provable_ops/add/: op_impl.rs
zkml/src/provable_ops/constant/: op_impl.rs  tract_conversion.rs
zkml/src/quantization/: metadata.rs  mod.rs  strategy.rs
zkml/src/tensor/: deep_tensor.rs  error.rs  utilities.rs
