[workspace]
members = [
  "mpcs",
  "simple-frontend",
  "zkml",
  "deep-prove",
  "utils",
]
resolver = "2"

[workspace.package]
categories = ["cryptography", "zk", "blockchain"]
edition = "2021"
keywords = ["cryptography", "zk", "blockchain"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LagrangeLabs/deep-prove"
version = "0.1.0"

[workspace.dependencies]
aes = "0.8"
anyhow = { version = "1.0", default-features = false }
ark-std = "0.5"
axum = { version = "0.8" }
bitvec = "1.0"
blake3 = { version = "1.4", features = ["serde"] }
cfg-if = "1.0"
clap = "4"
criterion = { version = "0.6", features = ["html_reports"] }
crossbeam-channel = "0.5"
csv = "1.3.1"
ctr = "0.9"
derive_more = "2.0.1"
env_logger = "0.11"
ff = "0.13"
goldilocks = { git = "https://github.com/scroll-tech/ceno-Goldilocks" }
hex = { version = "0.4" }
itertools = "0.13"
log = "0.4"
memmap2 = "0.9"
mpcs-lg = { version = "0.1.0", path = "mpcs" }
num-bigint = "0.4"
num-integer = "0.1"
object_store = { version = "0.12", features = ["aws"] }
p3-challenger = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "1ba4e5c" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", rev = "1ba4e5c", features = [
  "nightly-features",
] }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "1ba4e5c" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "1ba4e5c" }
plonky2 = "1.1"
pprof = "0.14.0"
proc-macro2 = "1.0.92"
quote = "1.0"
rand = "0.8.5"
rand_chacha = { version = "0.3", features = ["serde"] }
rand_core = "0.6"
rayon = "1.10"
rmp-serde = "1.3.0"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-frontend = { path = "simple-frontend" }
statrs = "0.18.0"
syn = "2.0"
tempfile = "3"
thiserror = "2.0.12"
timed = { git = "https://github.com/nikkolasg/timed-rs" }
timed-core = { git = "https://github.com/nikkolasg/timed-rs" }
tiny-keccak = "2.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tract-onnx = "0.21"

# gkr_iop = { git = "https://github.com/Lagrange-Labs/ceno", branch = "master" }
# ff_ext = { git = "https://github.com/Lagrange-Labs/ceno", branch = "master" }
# multilinear_extensions = { git = "https://github.com/Lagrange-Labs/ceno", branch = "master" }
# poseidon = { git = "https://github.com/Lagrange-Labs/ceno", branch = "master" }
# sumcheck_macro = { git = "https://github.com/Lagrange-Labs/ceno", branch = "master" }
# sumcheck = { git = "https://github.com/Lagrange-Labs/ceno", branch = "master" }
# transcript = { git = "https://github.com/Lagrange-Labs/ceno", branch = "master" }
# p3 = { git = "https://github.com/Lagrange-Labs/ceno", branch = "master" }

gkr_iop = { path = "../ceno/gkr_iop/" }
ff_ext = { path = "../ceno/ff_ext/" }
multilinear_extensions = { path = "../ceno/multilinear_extensions/" }
poseidon = { path = "../ceno/poseidon/" }
sumcheck_macro = { path = "../ceno/sumcheck_macro/" }
sumcheck = { path = "../ceno/sumcheck/" }
transcript = { path = "../ceno/transcript/" }
p3 = { path = "../ceno/p3" }

# Test must run fast, but still provides stacktraces.
[profile.test]
debug = true
debug-assertions = true
opt-level = 3
overflow-checks = true

[profile.test.package."*"]
opt-level = 3

[profile.release]
debug = 1
debug-assertions = true
lto = "thin"

[profile.fast]
inherits = "release"
lto = "fat"

#[patch."https://github.com/nikkolasg/timed-rs"]
#timed = { path = "/Users/nalos/prog/timed/timed" }
#timed-core = { path = "/Users/nalos/prog/timed/timed-core" }


