[package]
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "zkml"
description = "ZKML library"
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[features]
default = []
blake = ["mpcs/blake"]
# Capture layers' quatization outputs for regression tests
capture-layers-quant = []
mem-track = ["utils/mem-track"]

[dependencies]
anyhow.workspace = true
ark-std.workspace = true
burn = { version = "0.17.0", features = ["ndarray"] }
candle-core = "0.9.1"
hex = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
derive_more = { workspace = true, features = ["full"] }
ff_ext = { version = "0.1.0", path = "../ff_ext" }
gguf-rs = "0.1.4"
gkr = { workspace = true }
itertools.workspace = true
mpcs = { workspace = true }
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions", features = [
    "parallel",
] }
poseidon = { version = "0.1.0", path = "../poseidon" }
rayon.workspace = true
rmp-serde = { workspace = true }
rust_tokenizers = "8.1.1"
serde.workspace = true
serde_json.workspace = true
statrs = { workspace = true }
sumcheck = { version = "0.1.0", path = "../sumcheck" }
timed = { workspace = true }
timed-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
] }
tract-onnx = { workspace = true }
transcript = { version = "0.1.0", path = "../transcript" }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
utils = { path = "../utils" }
prost = { version = "0.13.3" }
prost-tract-compat = { package = "prost", version = "0.11.9" }

[dev-dependencies]
ndarray = "0.16.1"
criterion = { "version" = "0.6", features = ["html_reports"] }
zstd = "0.13"
reqwest = { version = "0.12.19", features = ["blocking"] }
sha2 = "0.10.9"

[[bench]]
name = "prove-model"
harness = false

[lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
